--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -25,6 +25,7 @@ library(lme4)
 ```{r echo=FALSE}
 # Importation du fichier 
 gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", stringsAsFactors = TRUE)
+gopher$year<-as.factor(gopher$year)
 summary(gopher)
 str(gopher)
 view(gopher)
@@ -34,12 +35,56 @@ view(gopher)
 Lisez les données, et assurez vous que les variables sont au bon format. Calculez des statistiques descriptives des données, et proposez des visualisations graphiques. Commentez ce que vous retenez de l'exploration des données.
 
 ```{r echo=FALSE}
-ggplot(, aes(x=, y=)) +
+
+ggplot(gopher, aes(x=prev, y=shells,color=Site, shape=year)) +
   geom_point() +
-  labs(caption = "",
-       x = "") +
+  geom_jitter(height = 0.1) +
+  facet_wrap(~Site)+
+  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de la prevalence de tortues séropositives",
+       x = "prev") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+ggplot(gopher, aes(x=year, y=shells, color=Site)) +
+  geom_point() +
+  geom_jitter(height = 0.06) +
+  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+       x = "Année") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+ggplot(gopher, aes(x=year, y=shells, color=Site)) +
+  geom_point() +
+  facet_wrap(~Site)+
+  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+       x = "Année") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+ggplot(gopher, aes(x=Site, y=Area,color=Site)) +
+  geom_point() +
+  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+       x = "Année") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+ 
+ggplot(gopher, aes(x=year, y=prev,color=Site)) +
+  geom_point() +
+  facet_wrap(~Site)+
+  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+       x = "Année") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+ggplot(gopher, aes(x=Area, y=prev,color=Site)) +
+  geom_point() +
+  facet_wrap(~Site)+
+  labs(captione= "Figure 1 : La prevalence de  en fonction de l'année et du site d'étude",
+       x = "Area") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+hist(gopher$shells)
+hist(gopher$Area)
+hist(gopher$prev)
 ```
+
+
 
 ```{r echo=FALSE, fig.height=7.5, fig.width=14}
 # D'abord, on définit les graphiques
