--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -40,27 +40,27 @@ ggplot(gopher, aes(x=prev, y=shells,color=Site, shape=year)) +
   geom_point() +
   geom_jitter(height = 0.1) +
   facet_wrap(~Site)+
-  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de la prevalence de tortues séropositives",
+  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de la prevalence de tortues séropositives",
        x = "prev") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 
 ggplot(gopher, aes(x=year, y=shells, color=Site)) +
   geom_point() +
   geom_jitter(height = 0.06) +
-  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
        x = "Année") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 
 ggplot(gopher, aes(x=year, y=shells, color=Site)) +
   geom_point() +
   facet_wrap(~Site)+
-  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
        x = "Année") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 
 ggplot(gopher, aes(x=Site, y=Area,color=Site)) +
   geom_point() +
-  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
        x = "Année") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 
@@ -68,20 +68,31 @@ ggplot(gopher, aes(x=Site, y=Area,color=Site)) +
 ggplot(gopher, aes(x=year, y=prev,color=Site)) +
   geom_point() +
   facet_wrap(~Site)+
-  labs(captione= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
+  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
        x = "Année") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 
 ggplot(gopher, aes(x=Area, y=prev,color=Site)) +
   geom_point() +
   facet_wrap(~Site)+
-  labs(captione= "Figure 1 : La prevalence de  en fonction de l'année et du site d'étude",
+  labs(caption= "Figure 1 : La prevalence de  en fonction de l'année et du site d'étude",
+       x = "Area") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+
+ggplot(gopher, aes(x=density, y=prev,color=Site)) +
+  geom_point() +
+  geom_jitter(width = 0.06) +
+  facet_wrap(~Site)+
+  labs(caption= "Figure 1 : La prevalence de séropositifs en fonction de la densité de tortues trouvées dans la zone",
        x = "Area") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 
 hist(gopher$shells)
 hist(gopher$Area)
 hist(gopher$prev)
+hist(gopher$density)
+
+mean(gopher$shells)
 ```
 
 
