--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Projet HAB904B"
-author: "Basile Pajot, Marion Themeze--Leroy,"
+author: "Basile Pajot (DARWIN), Marion Themeze--Leroy(ECOSYSTEMES),"
 date: "`r Sys.Date()`"
 output: 
   pdf_document : 
@@ -13,9 +13,10 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r echo=FALSE}
+```{r echo=FALSE,results='hide',,warning=FALSE,message=FALSE}
 # Chargement des pakages nécessaires
 library(tidyverse)
+library(plyr)
 library(cowplot)
 library(R2jags)
 library(lme4)
@@ -23,7 +24,7 @@ library(gtsummary)
 ```
 
 
-```{r echo=FALSE}
+```{r echo=FALSE,results='hide'}
 # Importation du fichier 
 gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", stringsAsFactors = TRUE)
 gopher$year<-as.factor(gopher$year)
@@ -38,123 +39,87 @@ view(gopher)
 ## La variable à expliquer
 
 La variable d'intérêt à expliquer, est `Shells`, soit le nombre de carapaces de 
-tortues trouvées lors des relevés sur le terrain. Cette variable est un proxy pour estimer le nombre de tortues mortes. 
-Nous voulons déterminer si : 
-- le nombre de carapaces to establish whether either (1) the number of shell remains found was correlated with seroprevalence in a given site and year or (2) the number of shell remains found was greater in high- than in low-prevalence sites.
+tortues récentes trouvées lors des relevés sur le terrain. Cette variable est un proxy pour estimer le nombre de tortues mortes d'une année sur l'autre.
 
-## Les variables explicatives d'intérêt
+## Les variables explicatives
+- `Prev` est une variable explicative qualitative qui correspond à la prévalence pour *Mycoplasma agassizii*, soit le rapport entre le nombre de tortues séropositives sur l'effectif total de tortues par année pour chaque site. 
 
--  `Prev` est une variable explicative qualitative qui correspond au taux de tortues séropostives pour à *Mycoplasma agassizii*. 
-
-- `Site` est une variable qualitative qui correspond au sité d'étude où ont été faits les relevés. Elle a 10 modalités : 
+- `Site` est une variable qualitative qui correspond au site d'étude où ont été faits les relevés. Elle a 10 modalités : 
 le parc national *Big Shoals (BS)*, l'aire de gestion de la faune sauvage *Camp Blanding (CB)*, l'aire de gestion de la faune sauvage et de l'environnement *Cecil Field/Branan Field (CF)*, une *propriété privé en Floride centrale (CE)*, le parc national *Fort Cooper (FC)*, l'aire de gestion de la faune sauvage *Flying Eagle (FE)*, le parc national *Gold Head Branch (GH)*, l'aire de gestion de la faune sauvage et de l'environnement *Perry Oldenburg (OL)*,la station biologique *Ordway-Swisher (OR)*, l'aire de gestion de la pêche *Tenoroc Fish (TE)*.
 
--  `Area` est une variable quantitative qui correspond à l'aire couverte par site lors des relevés. 
+- `Area` est une variable quantitative qui correspond à l'aire couverte par site lors des relevés. 
 
--  `Year` est une variable qualitative qui correspond à l'année pour laquelle les relevés ont été faits. Ella a 3 modalités : 2004, 2005, 2006. 
+- `Year` est une variable qualitative qui correspond à l'année pour laquelle les relevés ont été faits. Elle a 3 modalités : 2004, 2005, 2006. 
 
+## Exploration des données
 
 Lisez les données, et assurez vous que les variables sont au bon format. Calculez des statistiques descriptives des données, et proposez des visualisations graphiques. Commentez ce que vous retenez de l'exploration des données.
 
-```{r echo=FALSE}
-F1<- ggplot(gopher, aes(x=year, y=shells, fill=year)) +
-  geom_boxplot() +
-  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de l'année",
-       x = "Année") +
-  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
-F2<- ggplot(gopher, aes(x=Site, y=shells, fill=Site)) +
-  geom_boxplot() +
-  labs(caption= "Figure 2 : Le nombre de carapaces en fonction du site",
-       x = "Site") +
-  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+```{r}
+#Tableau de statistiques desciptives à faire 
 
-plot_grid(nrow=1, ncol=2,
-          F1,
-          F2)
+hist(gopher$shells)
 ```
 
-Le nombre de carapaces de tortues mortes varie en fonction des année et du site d'étude. Ainsi, ces deux 
-```{r echo=FALSE}
-ggplot(gopher, aes(x=Area, y=shells)) +
-  geom_point()
-```
 
 ```{r echo=FALSE}
 ggplot(gopher, aes(x=prev, y=shells,color=Site, shape=year)) +
   geom_point() +
   facet_wrap(~Site)+
-  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de la prevalence de tortues séropositives dans la zone d'étude, par site par année",
-       x = "Prévalence de tortues séropositives à Mycoplasma agassizii",
-       y= "Carapaces de tortues") +
+  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de la prevalence par site par année",
+       x = "Prévalence pour Mycoplasma agassizii",
+       y= "Nombre de carapaces ") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
 
+La figure 1 donne plusieurs informations sur notre jeu de données.
 
-La prévalence diffère en fonction des sites (Fig 1). 
-Pour un même site
+Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en fonction des années et cette variation n'est pas la même en fonction des sites. Le nombre de carapaces récentes par rapport à l'année précédente reste constante augmente ou diminue. Cette variation peut être globale sur les trois année d'étude (diminution du nombre de carapaces pour le site CF) ou changer (diminution puis augmentation pour le site CB). 
 
+Ensuite, la prévalence en fonction des sites peut également varier en fonction des années. Pareillement, cette variation n'est pas la même en fonction des sites. La prévalence reste constante, augmente ou diminue. La variation peut être globale sur les trois année d'étude (diminution du nombre de carapaces pour le site CF) ou changer (diminution puis augmentation pour le site CB). 
+Lorsque le prevalence augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de carapaces récentes trouvées l'année suivante augmente `shells[n+2]>shells[n+1]` (sites CB, OLD), et inversement (sites CF). 
+Ainsi, les variations du nombre de carapaces récentes trouvées pourrait être expliquée par les variations de la prévalence.
+Nous remqarquons également que certains sites ont de faibles prévalences (BS, Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF, GH, TE). Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible ou forte prévalence. Cette variables sera donc traitée de deux manières : de manière continue et de manière discontinue avec deux catégories : 
+    - faible prévalence (0) : `Prev` < 0.25 
+    - haute prévalence (1) : `Prev` > 0.25
+
+
+Nous allons donc essayer de déterminer si la prévalence et l'année permettent d'expliquer les variations du nombre de carapaces. 
+Nous avons vu que la prévalence et le nombre de carapaces trouvées diffère entre les sites et entre les années. Afin de pouvoir nous concentrer sur l'effet de la prévalence, nous allons mettre un effet aléatoire sur la variable `Site`. Nous pourrions faire de même pour la variable `Année` mais par souci de simplification, nous allons garder cette variable en effet fixe.
 
 ```{r echo=FALSE}
-ggplot(gopher, aes(x=year, y=shells, color=Site)) +
+area_site <- gopher$Area %>% 
+    unique()
+m_shells_persite<-ddply(gopher, .(Site), summarize, mean=mean(shells))
+Sites<-m_shells_persite$Site
+shells_mean <- m_shells_persite$mean
+shells_area <-data.frame(Sites,shells_mean,area_site)
+
+ggplot(shells_area,aes(x=area_site, y=shells_mean, color=Sites)) +
   geom_point() +
-  facet_wrap(~Site)+
-  labs(caption= "Figure 2 : Le nombre de carapaces en fonction de l'année et du site d'étude",
-       x = "Année") +
+  labs(caption= "Figure 2 : Le nombre moyen de carapaces en fonction de l'aire du site d'étude",
+       x = "Aire du site",
+       y = "Nombre moyen de carapaces") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
+Les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site. 
 
 
 
-```{r echo=FALSE}
-ggplot(gopher, aes(x=year, y=prev,color=Site)) +
-  geom_point() +
-  facet_wrap(~Site)+
-  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de l'année et du site d'étude",
-       x = "Année") +
-  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
-```
-
-```{r echo=FALSE}
-ggplot(gopher, aes(x=density, y=prev,color=Site)) +
-  geom_point() +
-  geom_jitter(width = 0.06) +
-  facet_wrap(~Site)+
-  labs(caption= "Figure 1 : La prevalence de séropositifs en fonction de la densité de tortues trouvées dans la zone",
-       x = "Area") +
-  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
-```
+D'après les observations faites précedemment, nous souhaitons donc déterminer si : 
+- le nombre de carapaces récentes trouvées est correlée avec la prevalence pour *Mycoplasma agassizii* pour une année donnée.
+- le nombre de carapces récentes trouvées est plus grand dans les sites à haute prévalence par rapport aux sites à basse prévalence.
 
 
-Graphique qui expliaue pourquoi site en aléatoire 
-Année pourrait être en aléatoire mais pour simplifier on ne le mets pas et donc on estime un coefficient par année
-Motrer que nombre carapces hange en fonciton preval
-Un graphique pour justififer l'offset 
-
-
-```{r echo=FALSE}
-tbl_summary(gopher, statistic = list(all_continuous() ~ "{N_obs}({min})({max})({mean})({median})({sd})"))
-table()
-```
-
-```{r echo=FALSE, fig.height=7.5, fig.width=14}
-# D'abord, on définit les graphiques
-p_1 <- ggplot(L, aes(x=, y=, fill=)) + 
-  geom_boxplot() + 
-  labs(x="", fill = "", caption = "") + 
-  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 14))
-
-p_2 <- ggplot(Limosa, aes(x=fPeriod, y=IntakeRate,fill= fPeriod)) + 
-  geom_boxplot() + 
-  labs(x="", fill = "", caption = "") + 
-  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 14))
-
-# Puis on les organise dans l'espace
-plot_grid(nrow=1, ncol=2,
-          p_1,
-          p_2)
-```
 # **Ajustement d'un modèle simple**
 Une analyse statistique passe toujours par l'ajustement d'un premier modèle simple. Commencez par décrire le modèle qui vous semble pertinent pour répondre à une des questions traitées dans l'article, en vous aidant d'équations ou pas, et en justifiant son utilisation. Rappelez les hypothèses sur lesquelles repose le modèle. Notez qu'il ne vous est pas demandé de vérifier la validité de ces hypothèses (l'analyse des résidus). Vous pouvez ignorer les effets aléatoires sur les pentes (slopes) et ne considérer que des modèles avec un effet aléatoire sur l'ordonnée à l'origine (intercept).
+
+
+Le modèle le plus complet qui nous semble pertinent à étudier est un modèle. avec le site en effet aléatoire et des effets fixes pour la prévalence et l'année. 
+
+Nous allons commencer par un premier modèle avec le nombre de carapaces récentes trouvées uniquement en fonction de la prévalence et un autre modèle avec uniquement l'année. 
+
+Notre variables à expliquer est une donnée de comptage et si au vu de la distribution (cf figure X)  allons donc construire un modèle linéaire généralisé avec le nombre de de carapaces qui suit une loi de Poisson. 
 
 $Y_{ijk}$   
 $\mu_0$ l'intercept moyen  
