--- a/Help.Rmd
+++ b/Help.Rmd
@@ -506,7 +506,7 @@ Nous considérons ici simplement l'effet simple de la prévalence mais en discon
 gopher_discont_prev <-function(){
   for (i in 1:N){
     S[i] ~ dpois(lambda[i])
-    logit(lambda[i]) <- mu.0 + b.prev * prev[i] + log(A[i])
+    log(lambda[i]) <- mu.0 + b.prev * prev[i] + log(A[i])
   }
   mu.0 ~ dnorm(0,0.001)
   b.prev ~ dnorm(0,0.001)
@@ -538,7 +538,7 @@ M7 <- jags(data=datax,
 
 # Regardons le modèle et les traces
 M7
-traceplot(M7, mfrow=c(2, 3), ask=FALSE)
+traceplot(M7, mfrow=c(1, 3), ask=FALSE)
 par(mfrow = c(1, 1))
 
 # Récupérons les paramètres et regardons leur distribution
