--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -22,11 +22,13 @@ anyLib(c("tidyverse", "cowplot", "R2jags", "lme4", "gtsummary", "plyr"))
 
 ```{r echo=FALSE,results='hide'}
 # Importation du fichier 
-gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", stringsAsFactors = TRUE)
-gopher$year<-as.factor(gopher$year)
-gopher$total_turtle<-gopher$Area*gopher$density
-summary(gopher)
-
+gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", stringsAsFactors = TRUE) %>% 
+  mutate(year = as.character(year),
+         total_turtle = density * Area,
+         standprev = (prev - mean(prev)) / sd(prev),
+         H = ifelse(prev <= 25, 0, 1),
+         Cov.y.1 = ifelse(year == 2005, 1, 0),
+         Cov.y.2 = ifelse(year == 2006, 1, 0))
 ```
 
 # **Lecture et exploration des données**
@@ -48,51 +50,55 @@ le parc national *Big Shoals (BS)*, l'aire de gestion de la faune sauvage *Camp 
 
 ## Exploration des données
 
+Nous regardons un résumé statistique des variables de notre jeu de donnée. 
 ```{r echo=FALSE}
 summary(gopher)
-boxplot(gopher$prev)
 ```
+Nous avons un plan d'expérience équilibré avec un même nombre d'observations par site et par année.\newline 
 
-Lisez les données, et assurez vous que les variables sont au bon format. Calculez des statistiques descriptives des données, et proposez des visualisations graphiques. Commentez ce que vous retenez de l'exploration des données.
-
-```{r}
-#Tableau de statistiques desciptives à faire 
-
-hist(gopher$shells)
-
-aggregate(gopher$shells, list(gopher$Site), FUN=mean)
-aggregate(gopher$prev, list(gopher$Site), FUN=mean)
-```
-
+Pour la prevalence `prev` la moyenne est supérieure à la médiane, c'est-à-dire que plus de 50% des valeurs sont inférieures à la moyenne. Il en est de même pour le nombre de carapces `shells`. De plus, pour la prévalence, la différence entre le troisème quartile et le minimum est d'environ 40, tout comme la différence entre le maximum et le 3ème quartile. Ainsi, la gamme de valeurs prise par 25% des données est égales à celle prise par 75% des données.
+Pour le nombre de carapaces, la gamme de valeurs prise par 25% des données est plus de trois fois supérieur à celle prise par 75% des données. Ceci est illustré par les *figures 1 et 2*. 
 
 ```{r echo=FALSE}
-ggplot(gopher, aes(x=prev, y=shells,color=Site, shape=year)) +
+F1<-ggplot(data=gopher, aes(x=prev)) + 
+  geom_histogram(bins=10, fill="blue", color="black") +
+  geom_vline(aes(xintercept=mean(prev)))+
+  geom_vline(aes(xintercept=median(prev)))+
+  labs(caption = "Figure 1 : Distribution de la prévalence pour Mycoplasma agassizii",
+       x="Prévalence pour Mycoplasma agassizii",
+       y="Comptage") +
+  theme(plot.caption = element_text(hjust=0, size=12, face="italic"))
+
+F2<-ggplot(data=gopher, aes(x=shells))+
+  geom_histogram(bins=5, fill="blue", color="black")+
+  labs(caption="Figure 2 : Distribution du nombre de carapaces",
+       x="Carapaces",
+       y="Comptage") + 
+  theme(plot.caption =element_text(hjust=0, size=12,face="italic"))
+
+plot_grid(nrow=1,ncol=2,
+          F1,
+          F2)
+```
+La distribution du nombre de carapaces ressemble à une distribution de Poisson.
+
+La figure 3 donne plusieurs informations sur notre jeu de données.
+
+```{r echo=FALSE}
+ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
   geom_point() +
   facet_wrap(~Site)+
-  labs(caption= "Figure 1 : Le nombre de carapaces en fonction de la prevalence par site par année",
+  labs(caption= "Figure 3 : Le nombre de carapaces en fonction de la prevalence par site par année",
        x = "Prévalence pour Mycoplasma agassizii",
        y= "Nombre de carapaces ") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
-
-La figure 1 donne plusieurs informations sur notre jeu de données.
-
-Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en fonction des années et cette variation n'est pas la même en fonction des sites. Le nombre de carapaces récentes par rapport à l'année précédente reste constante augmente ou diminue. On observe des évolutions différentes pour les sites : on observe une diminution du nombre de carapaces pour le site CF sur les trois ans ou un changement de tendance se traduisant par une diminution puis une augmentation pour le site CB. 
-
-Ensuite, la prévalence en fonction des sites peut également varier en fonction des années. Pareillement, cette variation n'est pas la même en fonction des sites. La prévalence reste constante, augmente ou diminue. La variation peut être globale sur les trois année d'étude (augmentation de la prévalence pour le site Old) ou changer (augmentation puis diminution pour le site Cent). 
-Lorsque le prevalence augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de carapaces récentes trouvées l'année suivante augmente `shells[n+2]>shells[n+1]` (sites CB, Old), et inversement (sites CF). 
+Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en fonction des années et cette variation n'est pas la même en fonction des sites. Le nombre de carapaces récentes par rapport à l'année précédente reste constante augmente ou diminue. On observe des évolutions différentes pour les sites : on observe une diminution du nombre de carapaces pour le site CF sur les trois ans ou un changement de tendance se traduisant par une diminution puis une augmentation pour le site CB.\newline
+Ensuite, la prévalence en fonction des sites peut également varier en fonction des années. Comme précédemment, cette variation n'est pas la même en fonction des sites. La prévalence reste constante, augmente ou diminue. La variation peut être globale sur les trois année d'étude (augmentation de la prévalence pour le site Old) ou changer (augmentation puis diminution pour le site Cent). 
+Lorsque le prevalence augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de carapaces récentes trouvées l'année suivante augmente `shells[n+2]>shells[n+1]` (sites CB, Old), et inversement (sites CF).\newline
 Ainsi, les variations du nombre de carapaces récentes trouvées pourrait être expliquée par les variations de la prévalence.
 
-Nous remqarquons également que certains sites ont de faibles prévalences (BS, Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF, GH, TE). 
-```{r echo=FALSE}
-ggplot(data=gopher, aes(x=prev)) + 
-  geom_histogram(bins=10, fill="blue", color="black") +
-  labs(caption = "Figure 2 : Distribution de la prévalence",
-       x="Prévalence",
-       y="Densité") +
-  theme(plot.caption = element_text(hjust=0, size=12, face="italic"))
-```
-En considérant l'histogramme, Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible ou forte prévalence. Cette variables sera donc traitée de deux manières : de manière continue et de manière discontinue avec deux catégories : 
+Il apparaît également que certains sites ont de faibles prévalences (BS, Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF, GH, TE). Ceci concourt avec les observations faites précedemments avec le résumé de la variable `prev` et la distribution de la prévalence. Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible ou forte prévalence. Cette variables sera donc traitée de deux manières : de manière continue et de manière discontinue avec deux catégories : 
     - faible prévalence (0) : `Prev` < 0.25 
     - haute prévalence (1) : `Prev` > 0.25
 
@@ -110,14 +116,12 @@ shells_area <-data.frame(Sites,shells_mean,area_site)
 
 ggplot(shells_area,aes(x=area_site, y=shells_mean, color=Sites)) +
   geom_point() +
-  labs(caption= "Figure 2 : Le nombre moyen de carapaces en fonction de l'aire du site d'étude",
+  labs(caption= "Figure 4 : Le nombre moyen de carapaces en fonction de l'aire du site d'étude",
        x = "Aire du site",
        y = "Nombre moyen de carapaces") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
-Les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site. 
-
-
+D'après la *figure 4* les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site. 
 
 D'après les observations faites précedemment, nous souhaitons donc déterminer si : 
 - le nombre de carapaces récentes trouvées est correlée avec la prevalence pour *Mycoplasma agassizii* pour une année donnée.
@@ -125,28 +129,105 @@ D'après les observations faites précedemment, nous souhaitons donc déterminer
 
 
 # **Ajustement d'un modèle simple**
-Une analyse statistique passe toujours par l'ajustement d'un premier modèle simple. Commencez par décrire le modèle qui vous semble pertinent pour répondre à une des questions traitées dans l'article, en vous aidant d'équations ou pas, et en justifiant son utilisation. Rappelez les hypothèses sur lesquelles repose le modèle. Notez qu'il ne vous est pas demandé de vérifier la validité de ces hypothèses (l'analyse des résidus). Vous pouvez ignorer les effets aléatoires sur les pentes (slopes) et ne considérer que des modèles avec un effet aléatoire sur l'ordonnée à l'origine (intercept).
+
+Nous commençons par un modèle simple `M1` en considérant uniquement l'effet de la prévalence sur le nombre de carapces récentes trouvées. 
+
+L'équation (apporche fréquentiste) du modèle linéaire simple s'écrit de la manière suivante : \newline 
+$$\frac {shells} {aire_{site}} = \mu_0 + \beta * prev$$
+Ceci se traduit an approche bayesienne par un modèle considérant les hypothèses suivantes : 
+- `shells` suit un loi de poisson de paramètre $\lambda$ (*cf figure 2*), c'est-à-dire que c'est une variable discrète de comptage dans un intervale de temps et un espace donnés ; avec une variance égale à la moyenne $E(shells)=V(shells)= \lambda$
+- toutes les observations de `shells` sont **indépendantes**
+- le logarithme de la moyenne de `shells` peut être exprimée comme la combinaaison linéaire des variables explicatives sélectionnées.
+- que les paramètres à estimer (ordonnée à l'origine et coefficients de regression) suivent des lois connues, explicités ci-après.
+
+Nous avons donc :
+$$Shells_i \space \stackrel{i.i.d}{\sim} \space Pois(\lambda_i) \space avec \space i=1,..30 \space le \space nombre \space d'observations$$  
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i$$ 
+\newline 
+Nous utilisons comme priors les distribution suivantes : \newline 
+$$\mu_0 \space {\sim} \space \mathcal{N}(0, 100)$$
+$$\beta \space {\sim} \space \mathcal{N}(0, 100)$$
+
+```{r echo=FALSE}
+# The prevalence model
+prevalence_model <- function(){
+  # We here use the null model and add the prevalence and a its coefficient
+  # Likelihood
+  for (i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + b.prev * prev[i] + log(A[i])
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 1/100)
+  b.prev ~ dnorm(0, 1/100)
+}
+
+# We make a list of the data to use in jags
+datax <- list(
+  N = gopher$year %>% 
+    length(),
+  S = gopher$shells,
+  prev = gopher$standprev,
+  A = gopher$Area
+)
+
+# Parameters to estimate
+params <- c("mu.0", "b.prev")
+
+# We initialise the model
+init1 <- list("mu.0"=0.5, "b.prev"=0.5)
+init2 <- list("mu.0"=-0.5, "b.prev"=-0.5)
+init <- list(init1, init2)
+
+# We define the iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+
+# We run the model
+M1 <- jags(
+  data = datax,
+  inits = init,
+  parameters.to.save = params,
+  model.file = prevalence_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin=1
+)
+
+# Regardons le modèle 
+M1
+```
+
+Nous vérifions que le modèle a bien convergé. 
+```{r echo=FALSE}
+# Regardons les traces
+traceplot(M1,mfrow = c(1, 3), varname = c('mu.0','b.prev','deviance'), ask = FALSE)
+par(mfrow=c(1, 1))
+```
+Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est aussi confirmé par la statistique de Gelman-Rubin  $\hat{R}$ qui est inférieure à 1.1 pour chaque paramètre estimé. Nous notons aussi que `n.eff` est supérieur à 100. Nous avons donc des estimations de nos paramètres qui sont stables et des chaines peu autocorrélées. 
 
 
-Le modèle le plus complet qui nous semble pertinent à étudier est un modèle. avec le site en effet aléatoire et des effets fixes pour la prévalence et l'année. 
+```{r echo=FALSE}
+# On récupère les résultats et on fait des histogrammes
+res <- M1$BUGSoutput$sims.matrix %>% 
+  as.data.frame()
+hist(res$b.prev)
+hist(res$mu.0)
 
-Nous allons commencer par un premier modèle avec le nombre de carapaces récentes trouvées uniquement en fonction de la prévalence et un autre modèle avec uniquement l'année. 
+# Tentative de réro-transformation 
+shells <- gopher$Area  * exp(res$mu.0 + res$b.prev * gopher$standprev)
+hist(shells)
+mean(shells)
 
-Notre variables à expliquer est une donnée de comptage et si au vu de la distribution (cf figure X)  allons donc construire un modèle linéaire généralisé avec le nombre de de carapaces qui suit une loi de Poisson. 
-
-$Y_{ijk}$   
-$\mu_0$ l'intercept moyen  
-$\mu_1$ la pente moyenne  
-$\alpha_{i}$ effet spécifique dû à la modalité i du facteur D 
-$\beta_{j}$ effet spécifique dû à la modalité j du facteur C 
-$\gamma_{i}$ terme correctif de la pente, associé à la modalité i du facteur B
-$\delta_{j}$ terme correctif de la pente, associé à la modalité j du facteur A
-$U_{0k}$ l'écart de l'intercept pour le kème X par rapport à l'intercept moyen  
-$\epsilon_{ijkl}$ erreur résiduelle 
-
-$$Y_{ijkl}=\mu_0 + \mu_1*Time_{kl} + \alpha_{i} + \beta_{j}+\gamma_{i}*Time_{il}+\delta_{j}*Time_{jl} + U_{0k}+ \epsilon_{ijkl} \space\space\space\space i=1,2,3 \space\space\space\space j=1,2,3 \space\space\space\space k=1,...,20$$
+# On récupère le DIC
+DIC1 <- M1$BUGSoutput$DIC
+```
 
 # **Comparaison de modèles**
+
+Une analyse statistique passe toujours par l'ajustement d'un premier modèle simple. Commencez par décrire le modèle qui vous semble pertinent pour répondre à une des questions traitées dans l'article, en vous aidant d'équations ou pas, et en justifiant son utilisation. Rappelez les hypothèses sur lesquelles repose le modèle. Notez qu'il ne vous est pas demandé de vérifier la validité de ces hypothèses (l'analyse des résidus). Vous pouvez ignorer les effets aléatoires sur les pentes (slopes) et ne considérer que des modèles avec un effet aléatoire sur l'ordonnée à l'origine (intercept).
+
 En vous aidant de l'article, formez quelques hypothèses et construirez les modèles correspondant. Ajustez et comparez ces modèles pour déterminer l'hypothèse la mieux supportée par les données. N'oubliez de standardiser les variables explicatives continues avec la fonction scale() de R par exemple. Dans le cas d'une variable année, la standardisation est un peu différente, n'utilisez pas la fonction scale(). Si year <- c(2006, 2007, ... 2021) par exemple, utilisez simplement la variable year - 2005 qui vaut (1, 2, .... 16) pour avoir toujours une variable entière, mais qui commence à 1 et ne prend plus de grandes valeurs.
 
 
