--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -132,21 +132,22 @@ D'après les observations faites précedemment, nous souhaitons donc déterminer
 
 Nous commençons par un modèle simple `M1` en considérant uniquement l'effet de la prévalence sur le nombre de carapces récentes trouvées. 
 
-L'équation (apporche fréquentiste) du modèle linéaire simple s'écrit de la manière suivante : \newline 
+L'équation (approche fréquentiste) du modèle linéaire simple est la manière suivante : \newline 
 $$\frac {shells} {aire_{site}} = \mu_0 + \beta * prev$$
-Ceci se traduit an approche bayesienne par un modèle considérant les hypothèses suivantes : 
+Ceci se traduit en approche bayesienne par un modèle considérant les hypothèses suivantes :
+
 - `shells` suit un loi de poisson de paramètre $\lambda$ (*cf figure 2*), c'est-à-dire que c'est une variable discrète de comptage dans un intervale de temps et un espace donnés ; avec une variance égale à la moyenne $E(shells)=V(shells)= \lambda$
 - toutes les observations de `shells` sont **indépendantes**
 - le logarithme de la moyenne de `shells` peut être exprimée comme la combinaaison linéaire des variables explicatives sélectionnées.
 - que les paramètres à estimer (ordonnée à l'origine et coefficients de regression) suivent des lois connues, explicités ci-après.
 
 Nous avons donc :
-$$Shells_i \space \stackrel{i.i.d}{\sim} \space Pois(\lambda_i) \space avec \space i=1,..30 \space le \space nombre \space d'observations$$  
+$$Shells_i\:\stackrel{i.i.d}{\sim} \: Pois(\lambda_i)\:avec\:i=1,..30\:le\:nombre\:d'observations$$  
 $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i$$ 
 \newline 
 Nous utilisons comme priors les distribution suivantes : \newline 
-$$\mu_0 \space {\sim} \space \mathcal{N}(0, 100)$$
-$$\beta \space {\sim} \space \mathcal{N}(0, 100)$$
+$$\mu_0\:{\sim}\:\mathcal{N}(0, 100)$$
+$$\beta\:{\sim}\:\mathcal{N}(0, 100)$$
 
 ```{r echo=FALSE}
 # The prevalence model
@@ -200,6 +201,7 @@ M1
 ```
 
 Nous vérifions que le modèle a bien convergé. 
+
 ```{r echo=FALSE}
 # Regardons les traces
 traceplot(M1,mfrow = c(1, 3), varname = c('mu.0','b.prev','deviance'), ask = FALSE)
@@ -207,23 +209,45 @@ par(mfrow=c(1, 1))
 ```
 Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est aussi confirmé par la statistique de Gelman-Rubin  $\hat{R}$ qui est inférieure à 1.1 pour chaque paramètre estimé. Nous notons aussi que `n.eff` est supérieur à 100. Nous avons donc des estimations de nos paramètres qui sont stables et des chaines peu autocorrélées. 
 
-
 ```{r echo=FALSE}
 # On récupère les résultats et on fait des histogrammes
-res <- M1$BUGSoutput$sims.matrix %>% 
+res1 <- M1$BUGSoutput$sims.matrix %>% 
   as.data.frame()
-hist(res$b.prev)
-hist(res$mu.0)
-
 # Tentative de réro-transformation 
-shells <- gopher$Area  * exp(res$mu.0 + res$b.prev * gopher$standprev)
-hist(shells)
-mean(shells)
 
+shells1 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res))
+for (i in 1:nrow(gopher)){
+  shells1[,i] <-gopher$Area[i] * exp(res1$mu.0 + res1$b.prev * gopher$standprev[i])
+}
+hist(shells1)
+mean(shells1)
+```
+
+shells1 <- shells1 %>% 
+  as.matrix(ncol=1) %>% 
+  as.data.frame() %>% 
+  rename(shells=x)
+
+```{r echo=FALSE}
+mean_mu1 <- mean(res1$mu.0)
+mean_b1 <- mean(res1$b.prev)
+
+ggplot(gopher, aes(x=prev, y=shells)) +
+  geom_point() +
+  geom_line(aes(x=prev, y=mean_mu1+ log(Area)+mean_b1*prev, color='red'))+
+  facet_wrap(~Site)+
+  labs(caption= "Figure 5 : Le nombre de carapaces en fonction de la prevalence par site par année",
+       x = "Prévalence pour Mycoplasma agassizii",
+       y= "Nombre de carapaces ") +
+  theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
+```
+Notre modèle `M1` prédit bien la distribution des carapaces mais elle ne prend pas en compte la variabilité des sites comme le montre les droites de regressions construites à partir de le moyenne de distributions postérieures de nos paramètres (*cf. figure 5*). 
+
+Comme vu dans la partie 1, le nombre de carapace varie en fonction de l'année et du site. Nous allons donc ajuster différents modèles qui prennent en compte ces deux variables individuellement ou en les combinant. 
+```{r echo=FALSE}
 # On récupère le DIC
 DIC1 <- M1$BUGSoutput$DIC
 ```
-
 # **Comparaison de modèles**
 
 Une analyse statistique passe toujours par l'ajustement d'un premier modèle simple. Commencez par décrire le modèle qui vous semble pertinent pour répondre à une des questions traitées dans l'article, en vous aidant d'équations ou pas, et en justifiant son utilisation. Rappelez les hypothèses sur lesquelles repose le modèle. Notez qu'il ne vous est pas demandé de vérifier la validité de ces hypothèses (l'analyse des résidus). Vous pouvez ignorer les effets aléatoires sur les pentes (slopes) et ne considérer que des modèles avec un effet aléatoire sur l'ordonnée à l'origine (intercept).
