--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -35,59 +35,28 @@ gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", str
 
 ## La variable à expliquer
 
-La variable d'intérêt à expliquer, est `Shells`, soit le nombre de
-carapaces de tortues récentes trouvées lors des relevés sur le terrain.
-Cette variable est un proxy pour estimer le nombre de tortues mortes
-d'une année sur l'autre.
+|   La variable d'intérêt à expliquer, est `Shells`, soit le nombre de carapaces de tortues récentes trouvées lors des relevés sur le terrain. Cette variable est un proxy pour estimer le nombre de tortues mortes d'une année sur l'autre.
 
 ## Les variables explicatives
 
--   `Prev` est une variable explicative qualitative qui correspond à la
-    prévalence pour *Mycoplasma agassizii*, soit le rapport entre le
-    nombre de tortues séropositives sur l'effectif total de tortues par
-    année pour chaque site.
+-   `Prev` est une variable explicative qualitative qui correspond à la prévalence pour *Mycoplasma agassizii*, soit le rapport entre le nombre de tortues séropositives sur l'effectif total de tortues par année pour chaque site.
 
--   `Site` est une variable qualitative qui correspond au site
-    d'échantillonnage. Elle a 10 modalités : le parc national *Big
-    Shoals (BS)*, l'aire de gestion de la faune sauvage *Camp Blanding
-    (CB)*, l'aire de gestion de la faune sauvage et de l'environnement
-    *Cecil Field/Branan Field (CF)*, une *propriété privé en Floride
-    centrale (CE)*, le parc national *Fort Cooper (FC)*, l'aire de
-    gestion de la faune sauvage *Flying Eagle (FE)*, le parc national
-    *Gold Head Branch (GH)*, l'aire de gestion de la faune sauvage et de
-    l'environnement *Perry Oldenburg (OL)*,la station biologique
-    *Ordway-Swisher (OR)*, l'aire de gestion de la pêche *Tenoroc Fish
-    (TE)*.
+-   `Site` est une variable qualitative qui correspond au site d'échantillonnage. Elle a 10 modalités : le parc national *Big Shoals(BS)*, l'aire de gestion de la faune sauvage *Camp Blanding (CB)*, l'aire de gestion de la faune sauvage et de l'environnement *Cecil Field/Branan Field (CF)*, une *propriété privé en Floride centrale (Cent)*, le parc national *Fort Cooper (FC)*, l'aire de gestion de la faune sauvage *Flying Eagle (FE)*, le parc national *Gold Head Branch (GH)*, l'aire de gestion de la faune sauvage et de l'environnement *Perry Oldenburg (Old)*, la station biologique *Ordway-Swisher (Ord)*, l'aire de gestion de la pêche *Tenoroc Fish (TE)*.
 
--   `Area` est une variable quantitative qui correspond à l'aire
-    couverte par site lors des relevés.
+-   `Area` est une variable quantitative qui correspond à l'aire couverte par site lors des relevés.
 
--   `Year` est une variable qualitative qui correspond à l'année pour
-    laquelle les relevés ont été faits. Elle a 3 modalités : 2004, 2005,
-    2006.
+-   `Year` est une variable qualitative qui correspond à l'année pour laquelle les relevés ont été faits. Elle a 3 modalités : 2004, 2005, 2006.
 
 ## Exploration des données
 
-Nous regardons un résumé statistique des variables de notre jeu de
-donnée.
+|   Nous regardons un résumé statistique des variables de notre jeu de donnée.
 
 ```{r echo=FALSE}
 summary(gopher)
 ```
 
-Nous avons un plan d'expérience équilibré avec un même nombre
-d'observations par site et par année.\newline 
-
-Pour la prevalence `prev` la moyenne est supérieure à la médiane,
-c'est-à-dire que plus de 50% des valeurs sont inférieures à la moyenne.
-Il en est de même pour le nombre de carapces `shells`. De plus, pour la
-prévalence, la différence entre le troisème quartile et le minimum est
-d'environ 40, tout comme la différence entre le maximum et le 3ème
-quartile. Ainsi, la gamme de valeurs prise par 25% des données est
-égales à celle prise par 75% des données. Pour le nombre de carapaces,
-la gamme de valeurs prise par 25% des données est plus de trois fois
-supérieur à celle prise par 75% des données. Ceci est illustré par les
-*figures 1 et 2*.
+|   Nous avons un plan d'expérience équilibré avec un même nombre d'observations par site et par année. 
+Pour la prevalence `prev` la moyenne est supérieure à la médiane, c'est-à-dire que plus de 50% des valeurs sont inférieures à la moyenne. Il en est de même pour le nombre de carapces `shells`. De plus, pour la prévalence, la différence entre le troisème quartile et le minimum est d'environ 40, tout comme la différence entre le maximum et le 3ème quartile. Ainsi, la gamme de valeurs prise par 25% des données est égales à celle prise par 75% des données. Pour le nombre de carapaces, la gamme de valeurs prise par 25% des données est plus de trois fois supérieur à celle prise par 75% des données. Ceci est illustré par les *figures 1 et 2*.
 
 ```{r echo=FALSE}
 F1<-ggplot(data=gopher, aes(x=prev)) + 
@@ -113,8 +82,7 @@ plot_grid(nrow=1,ncol=2,
           F2)
 ```
 
-La distribution du nombre de carapaces ressemble à une distribution de
-Poisson.
+La distribution du nombre de carapaces ressemble à une distribution de Poisson.
 
 La figure 3 donne plusieurs informations sur notre jeu de données.
 
@@ -128,43 +96,14 @@ ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
 
-Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en
-fonction des années et cette variation n'est pas la même en fonction des
-sites. Le nombre de carapaces récentes par rapport à l'année précédente
-reste constante augmente ou diminue. On observe des évolutions
-différentes pour les sites : on observe une diminution du nombre de
-carapaces pour le site CF sur les trois ans ou un changement de tendance
-se traduisant par une diminution puis une augmentation pour le site
-CB.\newline Ensuite, la prévalence en fonction des sites peut également
-varier en fonction des années. Comme précédemment, cette variation n'est
-pas la même en fonction des sites. La prévalence reste constante,
-augmente ou diminue. La variation peut être globale sur les trois année
-d'étude (augmentation de la prévalence pour le site Old) ou changer
-(augmentation puis diminution pour le site Cent). Lorsque le prevalence
-augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de
-carapaces récentes trouvées l'année suivante augmente
-`shells[n+2]>shells[n+1]` (sites CB, Old), et inversement (sites
-CF).\newline Ainsi, les variations du nombre de carapaces récentes
-trouvées pourrait être expliquée par les variations de la prévalence.
+|   Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en fonction des années et cette variation n'est pas la même en fonction des sites. Le nombre de carapaces récentes par rapport à l'année précédente reste constante augmente ou diminue. On observe des évolutions différentes pour les sites : on observe une diminution du nombre de carapaces pour le site CF sur les trois ans ou un changement de tendance se traduisant par une diminution puis une augmentation pour le site CB.
+|   Ensuite, la prévalence en fonction des sites peut également varier en fonction des années. Comme précédemment, cette variation n'est pas la même en fonction des sites. La prévalence reste constante, augmente ou diminue. La variation peut être globale sur les trois année d'étude (augmentation de la prévalence pour le site Old) ou changer (augmentation puis diminution pour le site Cent). Lorsque le prevalence augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de carapaces récentes trouvées l'année suivante augmente `shells[n+2]>shells[n+1]` (sites CB, Old), et inversement (sites CF). Ainsi, les variations du nombre de carapaces récentes trouvées pourrait être expliquée par les variations de la prévalence.
 
-Il apparaît également que certains sites ont de faibles prévalences (BS,
-Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF,
-GH, TE). Ceci concourt avec les observations faites précedemments avec
-le résumé de la variable `prev` et la distribution de la prévalence.
-Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible
-ou forte prévalence. Cette variables sera donc traitée de deux manières
-: de manière continue et de manière discontinue avec deux catégories : -
-faible prévalence (0) : `Prev` \< 0.25 - haute prévalence (1) : `Prev`
-\> 0.25
+|   Il apparaît également que certains sites ont de faibles prévalences (BS, Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF, GH, TE). Ceci concourt avec les observations faites précedemments avec le résumé de la variable `prev` et la distribution de la prévalence. Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible ou forte prévalence. Cette variables sera donc traitée de deux manières : de manière continue et de manière discontinue avec deux catégories : 
+- faible prévalence (0) : `Prev` \< 0.25 
+- haute prévalence (1) : `Prev` \> 0.25
 
-Nous allons donc essayer de déterminer si la prévalence et l'année
-permettent d'expliquer les variations du nombre de carapaces. Nous avons
-vu que la prévalence et le nombre de carapaces trouvées diffère entre
-les sites et entre les années. Afin de pouvoir nous concentrer sur
-l'effet de la prévalence, nous allons mettre un effet aléatoire sur la
-variable `Site`. Nous pourrions faire de même pour la variable `Année`
-mais par souci de simplification, nous allons garder cette variable en
-effet fixe.
+|   Nous allons donc essayer de déterminer si la prévalence et l'année permettent d'expliquer les variations du nombre de carapaces. Nous avons vu que la prévalence et le nombre de carapaces trouvées diffère entre les sites et entre les années. Afin de pouvoir nous concentrer sur l'effet de la prévalence, nous allons mettre un effet aléatoire sur la variable `Site`. Nous pourrions faire de même pour la variable `Année` mais par souci de simplification, nous allons garder cette variable en effet fixe.
 
 ```{r echo=FALSE}
 area_site <- gopher$Area %>% 
@@ -182,28 +121,18 @@ ggplot(shells_area,aes(x=area_site, y=shells_mean, color=Sites)) +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
 
-D'après la *figure 4* les sites n'ont pas tous la même aire et il semble
-qu'un plus grand nombre de carapces sont trouvés sur les sites avec une
-plus grande aire. Afin de pourvoir comparer les sites entre eux, nous
-allons prendre le rapport entre le nombre de carapaces trouvées par site
-et l'aire du site.
+|   D'après la *figure 4* les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site.
 
-D'après les observations faites précedemment, nous souhaitons donc
-déterminer si : - le nombre de carapaces récentes trouvées est correlée
-avec la prevalence pour *Mycoplasma agassizii* pour une année donnée. -
-le nombre de carapces récentes trouvées est plus grand dans les sites à
-haute prévalence par rapport aux sites à basse prévalence.
+|   D'après les observations faites précedemment, nous souhaitons donc déterminer si : 
+- le nombre de carapaces récentes trouvées est correlée avec la prevalence pour *Mycoplasma agassizii* pour une année donnée.
+- le nombre de carapces récentes trouvées est plus grand dans les sites à haute prévalence par rapport aux sites à basse prévalence.
 
 # **Ajustement d'un modèle simple**
 
-Nous commençons par un modèle simple `M1` en considérant uniquement
-l'effet de la prévalence sur le nombre de carapces récentes trouvées.
-
-L'équation (approche fréquentiste) du modèle linéaire simple est la
-manière suivante : \newline 
-$$\frac {shells} {aire_{site}} = \mu_0 + \beta * prev$$ Ceci se traduit
-en approche bayesienne par un modèle considérant les hypothèses
-suivantes :
+|   Nous commençons par un modèle simple `M1` en considérant uniquement l'effet de la prévalence sur le nombre de carapces récentes trouvées.\newline
+L'équation (approche fréquentiste) du modèle linéaire simple est la manière suivante : \newline 
+$$\frac {shells} {aire_{site}} = \mu_0 + \beta * prev$$ 
+Ceci se traduit en approche bayesienne par un modèle considérant les hypothèses suivantes :
 
 -   `shells` suit un loi de poisson de paramètre $\lambda$ (*cf figure
     2*), c'est-à-dire que c'est une variable discrète de comptage dans
@@ -217,11 +146,12 @@ suivantes :
 
 Nous avons donc :
 $$Shells_i\:\stackrel{i.i.d}{\sim} \: Pois(\lambda_i)\:avec\:i=1,..30\:le\:nombre\:d'observations$$\
-$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i$$ \newline 
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i, \:la\:fonction\:de\:lien$$ \newline 
 Nous utilisons comme priors les distribution suivantes : \newline 
 $$\mu_0\:{\sim}\:\mathcal{N}(0, 100)$$
 $$\beta\:{\sim}\:\mathcal{N}(0, 100)$$
 
+Pour le modèle `M1` nous obtenons les résultats suivants. 
 ```{r echo=FALSE}
 # The prevalence model
 prevalence_model <- function(){
@@ -266,7 +196,7 @@ M1 <- jags(
   n.chains = 2,
   n.iter = nb.iterations,
   n.burnin = nb.burnin,
-  n.thin=1
+  n.thin=1, quiet=TRUE,progress.bar='none'
 )
 
 # Regardons le modèle 
@@ -281,12 +211,9 @@ traceplot(M1,mfrow = c(1, 3), varname = c('mu.0','b.prev','deviance'), ask = FAL
 par(mfrow=c(1, 1))
 ```
 
-Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est
-aussi confirmé par la statistique de Gelman-Rubin $\hat{R}$ qui est
-inférieure à 1.1 pour chaque paramètre estimé. Nous notons aussi que
-`n.eff` est supérieur à 100. Nous avons donc des estimations de nos
-paramètres qui sont stables et des chaines peu autocorrélées.
+Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est aussi confirmé par la statistique de Gelman-Rubin $\hat{R}$ qui est inférieure à 1.1 pour chaque paramètre estimé. Nous notons aussi que `n.eff` est supérieur à 100.\newline Nous avons donc des estimations de nos paramètres qui sont stables et des chaines peu autocorrélées.
 
+Nous regardons maintenant la distribution *a posteriori* et le moyenne ($\lambda$) du nombre de carapaces à partir des paramètres estimés par notre modèle. 
 ```{r echo=FALSE}
 # On récupère les résultats et on fait des histogrammes
 res1 <- M1$BUGSoutput$sims.matrix %>% 
@@ -317,10 +244,7 @@ ggplot(gopher, aes(x=prev, y=shells)) +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
 
-Notre modèle `M1` prédit bien la distribution des carapaces mais elle ne
-prend pas en compte la variabilité des sites comme le montre les droites
-de regressions construites à partir de le moyenne de distributions
-postérieures de nos paramètres (*cf. figure 5*).
+|   Notre modèle `M1` prédit bien la distribution des carapaces mais elle ne prend pas en compte la variabilité des sites comme le montre les droites de regressions construites à partir de le moyenne de distributions postérieures de nos paramètres (*cf. figure 5*).
 
 ```{r echo=FALSE}
 # On récupère le DIC
@@ -329,21 +253,27 @@ DIC1 <- M1$BUGSoutput$DIC
 
 # **Comparaison de modèles**
 
-En vous aidant de l'article, formez quelques hypothèses et construirez
-les modèles correspondant. Ajustez et comparez ces modèles pour
-déterminer l'hypothèse la mieux supportée par les données. N'oubliez de
-standardiser les variables explicatives continues avec la fonction
-scale() de R par exemple. Dans le cas d'une variable année, la
-standardisation est un peu différente, n'utilisez pas la fonction
-scale(). Si year \<- c(2006, 2007, ... 2021) par exemple, utilisez
-simplement la variable year - 2005 qui vaut (1, 2, .... 16) pour avoir
-toujours une variable entière, mais qui commence à 1 et ne prend plus de
-grandes valeurs.
+|   D'après nos observations de la *partie 1*, nous pouvons faire l'hypothèse que le nombre de carapaces récentes trouvées peut être expliqué par un effet de l'année, par la prévalence pour *Mycoplasma agassizii* et par un effet du site.
+|   Bien qu'il y ait une variabilité entre sites, nous souhaitons avant tout connaître l'effet de la prévalence sur le nombre de carapaces récentes d'une année sur l'autre, quel que soit le site. Afin de pouvoir généraliser à tout site, nous allons mettre un effet aléatoire du site sur l'ordonnée à l'origine pour prendre en compte cette variabilité, sans pour autant l'estimer.
 
-Comme vu dans la partie 1, le nombre de carapace varie en fonction de
-l'année et du site. Nous allons donc ajuster différents modèles qui
-prennent en compte ces deux variables individuellement ou en les
-combinant.
+Le modèle le plus complet qui répond à cette hypothèse est le suivant : 
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \gamma_j + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}+ \beta * prev_i,\:\:avec\:\:i=1,...,30\:\:et\:\:j=1,...,10$$
+Il est poossible que seulement l'une de ces variables ou des combinaisons deux par deux expliquent le mieux la variabilité du nombre de carapaces récentes. Nous allons donc ajuster différents modèles qui prennent en compte ces trois variables individuellement ou en les combinant pour étudier uniquement l'effet de l'année, l'effet de l'année et du site, ou l'effet de l'année et de la prévalence. Dans les modèles avec la prévalence comme varibale continue, celle-ci est standardisée. 
+
+|   Pour répondre à notre deuxième question concenrant l'influence des sites à haute prévalence par rapport aux sites à faible prévalence, nous allons étudier trois modèles utilisant la prévalence en tant que covariable discontinue ${H}$, avec $H = \left\{\begin{array}{ll}1 & \mbox{si prevalence > 25}\\0 & \mbox{sinon}\end{array}\right.$.\newline
+Le premier avec l'effet de la prévalence uniquement, un deuxième avec l'effet de l'année et de la prévalence, et un troisième avec l'effet de l'année, de la prévalence et un effet aléatoire du site sur l'ordonnée à l'origine.
+
+Pour l'ensemble des modèles, nous utilisons comme priors les distributions suivantes :
+
+- $\mu_0\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\mu_0\:\:l'ordonnée\:\:à\:\:l'origine$
+- $\beta\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\beta\:\:la\:\:pente\:\:de\:\:regression\:\:associée\:\:à\:\:la\:\:prévalence$
+- $\alpha_0\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_0\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'année\:\:2004$
+- $\alpha_0\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_0\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'effet\:\:spécifique\:\:de\:\:l'année\:\:2004$
+- $\alpha_1\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_1\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'effet\:\:spécifique\:\:de\:\:l'année\:\:2005$
+- $\alpha_2\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_2\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'effet\:\:spécifique\:\:de\:\:l'année\:\:2006$
+- $\gamma_j\:{\sim}\:\mathcal{N}(0,\tau),\:avec\:\:\gamma_j\:\:le\:\:coefficient\:\:spécifique\:\:sur\:\:l'intercept\:\: associé\:\:\:à\:\:\:l'effet\:\:du\:\:j^{ème}\:\:site,avec\:\:\tau\:=\:\sigma_{s}^2$
+- $\sigma_s\:{\sim}\:\mathcal{U}(0,100)$
+
 
 Le modèle null `M2` : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0$$
 
